--- a/index_backup.html
+++ b/index_backup.html
@@ -1,55 +1,17 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-    <title>Lei Shu (舒蕾) - Homepage</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-    <style>
-        /* Navbar styles */
-        .navbar {
-            background-color: #2c3e50;
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 1000;
-            display: flex;
-            justify-content: center; /* Center the content */
-            align-items: center;
-            padding: 0.5em 0;
-        }
-        .navbar a {
-            color: white;
-            text-align: center;
-            padding: 0.5em 1em;
-            text-decoration: none;
-            font-size: 1em;
-        }
-        .navbar a:hover {
-            background-color: #76D7C4;
-            color: white;
-        }
-        body {
-            padding-top: 60px; /* Add padding to prevent overlap with the navbar */
-        }
-    </style>
-</head>
-<body class="is-preload">
+	<head>
+		<title>Lei Shu (舒蕾) - Homepage</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-    <!-- Navigation Bar -->
-    <div class="navbar">
-        <a href="#header">Home</a>
-        <a href="#welcome">About</a>
-        <a href="#news">News</a>
-        <a href="#publications">Publications</a>
-        <a href="#services">Services</a>
-    </div>
-
-    <!-- Header -->
     <section id="header">
         <div class="inner">
-            <img class="img-circle" src="images/IMG_0530_small.JPG" alt="Lei Shu's pic" />
+            <img class="img-circle" src = "images/IMG_0530_small.JPG" alt = "Lei Shu's pic" />
             <h1>Lei Shu</h1>
             <h5>Agentic AI, Large Multimodal and Language Models, Reinforcement Learning</h5>
             <ul class="icons">
@@ -57,11 +19,10 @@
                 <li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
                 <li><a href="https://www.youtube.com/channel/UCbIYHHiFF0JNPTbVT5YsnZQ?view_as=subscriber" class="icon alt fa-youtube"><span class="label">Youtube</span></a></li>
                 <li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-                <li><a href="mailto: leishu@google.com" class="icon alt fa-envelope"><span class="label">EMail</span></a></li>
+                <!-- <li><a href="mailto: shulindt@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li> -->
             </ul>
         </div>
     </section>
-
 
     <!-- News Section -->
     <section id="welcome" class="main style2">
@@ -191,7 +152,7 @@
         <ul class="icons">
             <li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
             <li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-            <li><a href="mailto:leishu@google.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+            <!-- <li><a href="mailto:shulindt@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li> -->
         </ul>
         <ul class="copyright">
             <li>&copy; Lei Shu</li><li>Design: HTML5 UP</li>
