fix service link

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="container">
             <h2 style="display:inline; color: #76D7C4;">Services and Awards</h2>
             <p> I actively serve as an Area Chair for ACL ARR (covering ACL, EMNLP, NAACL, EACL, and COLING) and as a reviewer for conferences including NeurIPS, ICML, ICLR, AAAI, IJCAI, WACV, and others.</p>
-            <a href="service.html" class="button">View More Services and Awards</a>
+            <a href="services.html" class="button">View More Services and Awards</a>
         </div>
     </section>
 
