add nav bar in publication and service html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h1>Lei Shu</h1>
             <h5>Agentic AI, Large Multimodal and Language Models, Reinforcement Learning</h5>
             <ul class="icons">
-                <li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
+                <li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google Scholar</span></a></li>
                 <li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
                 <li><a href="https://www.youtube.com/channel/UCbIYHHiFF0JNPTbVT5YsnZQ?view_as=subscriber" class="icon alt fa-youtube"><span class="label">Youtube</span></a></li>
                 <li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
@@ -191,7 +191,7 @@
         <ul class="icons">
             <li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
             <li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-            <li><a href="mailto:leishu@google.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+            <li><a href="mailto: leishu@google.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
         </ul>
         <ul class="copyright">
             <li>&copy; Lei Shu</li><li>Design: HTML5 UP</li>
