--- a/publications.html
+++ b/publications.html
@@ -1,13 +1,50 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Lei Shu (舒蕾) - Homepage</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<head>
+    <title>Lei Shu (舒蕾) - Homepage</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <style>
+        /* Navbar styles */
+        .navbar {
+            background-color: #2c3e50;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+            display: flex;
+            justify-content: center; /* Center the content */
+            align-items: center;
+            padding: 0.5em 0;
+        }
+        .navbar a {
+            color: white;
+            text-align: center;
+            padding: 0.5em 1em;
+            text-decoration: none;
+            font-size: 1em;
+        }
+        .navbar a:hover {
+            background-color: #76D7C4;
+            color: white;
+        }
+        body {
+            padding-top: 60px; /* Add padding to prevent overlap with the navbar */
+        }
+    </style>
+</head>
+<body class="is-preload">
+
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <a href="index.html#header">Home</a>
+        <a href="index.html#welcome">About</a>
+        <a href="index.html#news">News</a>
+        <a href="#one">Publications</a>
+        <a href="index.html#services">Services</a>
+    </div>
 
         <section id="one" class="main style2">
             <div class="align-left">
@@ -58,6 +95,7 @@
                         </li>
                         </ul>
                 <h3 style="display:inline; ">2023</h3><p style="display:inline">
+                    <ul style="list-style-type:circle; line-height:200%;">
                     <li style="margin-bottom: 1em;"><strong>Critique ability of large language models</strong><br>
                         Liangchen Luo, Zi Lin, Yinxiao Liu, <b>Lei Shu</b>, Yun Zhu, Jingbo Shang, Lei Meng<br>
                         <em>arXiv:2310.04815</em>
@@ -81,7 +119,7 @@
                             [<a href="https://aclanthology.org/2023.acl-demo.43.pdf">paper</a>]
                         </small>
                     </li>
-
+                </ul>
                 <h3 style="display:inline; ">2022</h3><p style="display:inline">
                 <ul style="list-style-type:circle; line-height:200%;">
 
