--- a/services.html
+++ b/services.html
@@ -1,13 +1,50 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Lei Shu (舒蕾) - Homepage</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<head>
+    <title>Lei Shu (舒蕾) - Homepage</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <style>
+        /* Navbar styles */
+        .navbar {
+            background-color: #2c3e50;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+            display: flex;
+            justify-content: center; /* Center the content */
+            align-items: center;
+            padding: 0.5em 0;
+        }
+        .navbar a {
+            color: white;
+            text-align: center;
+            padding: 0.5em 1em;
+            text-decoration: none;
+            font-size: 1em;
+        }
+        .navbar a:hover {
+            background-color: #76D7C4;
+            color: white;
+        }
+        body {
+            padding-top: 60px; /* Add padding to prevent overlap with the navbar */
+        }
+    </style>
+</head>
+<body class="is-preload">
+
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <a href="index.html#header">Home</a>
+        <a href="index.html#welcome">About</a>
+        <a href="index.html#news">News</a>
+        <a href="index.html#publications">Publications</a>
+        <a href="#one">Services</a>
+    </div>
 
         <section id="one" class="main style2">
             <div class="align-left">
