--- a/index.html
+++ b/index.html
@@ -82,12 +82,11 @@
         <div class="container">
             <h2 style="color: #76D7C4">News</h2>
             <ul style="list-style-type:circle; line-height:200%;">
-		<li>Our new <a href="https://deepmind.google/models/project-astra/">Project Astra</a>, launched at Google I/O 2025. 
-  I'm proud to lead modeling for <strong>Computer Control & Visual Overlay</strong>. 
-  Check out our demos: 
-  <a href="https://www.youtube.com/watch?v=JcDBFAm9PPI">Project Astra Action Intelligence</a> and 
-  <a href="https://www.youtube.com/watch?v=MQ4JfafE5Wo">Project Astra x Education (Visual Tutor)</a>.</li>
-		<li></li>
+		<li>Our new, <a href="https://deepmind.google/models/project-astra/">Project Astra</a>, launched at Google I/O 2025.<br>
+  I'm proud to lead modeling for <b>Computer Control & Visual Overlay</b>.<br>
+  Check out our demos:<br>
+  • <a href="https://www.youtube.com/watch?v=JcDBFAm9PPI">Project Astra Overview</a><br>
+  • <a href="https://www.youtube.com/watch?v=MQ4JfafE5Wo">Project Astra x Education (Visual Tutor)</a></li>
                 <li>I am no longer seeking a student researcher, as the position has been filled. Thank you to everyone who expressed interest. <del>I am seeking a student researcher for Summer/Winter 2025 to collaborate on cutting-edge Agentic AI projects. If you are interested, please apply via <a href="https://www.google.com/about/careers/applications/jobs/results/99522332606767814-student-researcher-phd-wintersummer-2025">Google Careers</a> and <a href="mailto: leishu@google.com">send me an email</a> once the recruiter confirms your inclusion in the candidate pool. </del>
             </ul>
         </div>
