--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="container">
             <h2 style="color: #76D7C4">News</h2>
             <ul style="list-style-type:circle; line-height:200%;">
-		<li>Our new, <a href="https://deepmind.google/models/project-astra/">Project Astra</a>, launched at Google I/O 2025.<br>
+		<li>Our new, <a href="https://deepmind.google/models/project-astra/">Project Astra</a>, launched at Google I/O 2025.
   I'm proud to lead modeling for <b>Computer Control & Visual Overlay</b>.<br>
   Check out our demos:<br>
   • <a href="https://www.youtube.com/watch?v=JcDBFAm9PPI">Project Astra Overview</a><br>
