--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<li>Our new, <a href="https://deepmind.google/models/project-astra/">Project Astra</a>, launched at Google I/O 2025.
   I'm proud to lead modeling for <b>Computer Control & Visual Overlay</b>.<br>
   Check out our demos:<br>
-  • <a href="https://www.youtube.com/watch?v=JcDBFAm9PPI">Project Astra Overview</a><br>
+  • <a href="https://www.youtube.com/watch?v=JcDBFAm9PPI">Project Astra Action Intelligence</a><br>
   • <a href="https://www.youtube.com/watch?v=MQ4JfafE5Wo">Project Astra x Education (Visual Tutor)</a></li>
                 <li>I am no longer seeking a student researcher, as the position has been filled. Thank you to everyone who expressed interest. <del>I am seeking a student researcher for Summer/Winter 2025 to collaborate on cutting-edge Agentic AI projects. If you are interested, please apply via <a href="https://www.google.com/about/careers/applications/jobs/results/99522332606767814-student-researcher-phd-wintersummer-2025">Google Careers</a> and <a href="mailto: leishu@google.com">send me an email</a> once the recruiter confirms your inclusion in the candidate pool. </del>
             </ul>
